--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "18.2.4",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
+    "axios": "^1.4.0",
     "eslint": "^8.42.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
