--- a/.gitignore
+++ b/.gitignore
@@ -26,10 +26,13 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.env
 
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
-# next-env.d.ts
+ next-env.d.ts
+
+ 
