--- a/package.json
+++ b/package.json
@@ -31,8 +31,14 @@
     "@commitlint/config-conventional": "^17.6.5",
     "@types/next": "^9.0.0",
     "@types/react-slick": "^0.23.10",
+    "autoprefixer": "^10.4.14",
     "husky": "^8.0.3",
+    "postcss": "^8.4.24",
+    "postcss-import": "^15.1.0",
+    "postcss-nested": "^6.0.1",
     "prettier": "^2.8.8",
-    "sass": "^1.62.1"
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "sass": "^1.62.1",
+    "tailwindcss": "^3.3.2"
   }
 }
