--- a/package.json
+++ b/package.json
@@ -13,33 +13,33 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "eslint": "^8.42.0",
-    "eslint-config-next": "^13.4.7",
-    "next": "^13.4.7",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "eslint": "^8.44.0",
+    "eslint-config-next": "^13.4.9",
+    "next": "^13.4.9",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
-    "typescript": "^5.1.5"
+    "typescript": "^5.1.6"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.6.5",
-    "@commitlint/config-conventional": "^17.6.5",
+    "@commitlint/cli": "^17.6.6",
+    "@commitlint/config-conventional": "^17.6.6",
     "@types/next": "^9.0.0",
-    "@types/node": "^20.3.2",
+    "@types/node": "^20.4.0",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@types/react-slick": "^0.23.10",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0",
     "autoprefixer": "^10.4.14",
     "husky": "^8.0.3",
-    "postcss": "^8.4.24",
+    "postcss": "^8.4.25",
     "postcss-import": "^15.1.0",
     "postcss-nested": "^6.0.1",
-    "prettier": "^2.8.8",
+    "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.3.0",
-    "sass": "^1.62.1",
+    "sass": "^1.63.6",
     "tailwindcss": "^3.3.2"
   }
 }
