--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "classnames": "^2.3.2",
     "eslint": "^8.44.0",
     "eslint-config-next": "^13.4.9",
     "next": "^13.4.9",
