--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.4.0",
     "eslint": "^8.44.0",
     "eslint-config-next": "13.4.10",
+    "http-proxy-middleware": "^2.0.6",
     "next": "13.4.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
