fix: dockerfile husky v4 husky optional

--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "autoprefixer": "^10.4.14",
-    "husky": "^8.0.3",
     "postcss": "^8.4.26",
     "postcss-import": "^15.1.0",
     "postcss-nested": "^6.0.1",
@@ -42,5 +41,8 @@
     "prettier-plugin-tailwindcss": "^0.3.0",
     "sass": "^1.63.6",
     "tailwindcss": "^3.3.3"
+  },
+  "optionalDependencies": {
+    "husky": "^8.0.3"
   }
 }
