--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "13.4.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^7.2.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "typescript": "^5.1.6"
@@ -39,6 +40,7 @@
     "postcss-nested": "^6.0.1",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
+    "raw-loader": "^4.0.2",
     "sass": "^1.63.6",
     "tailwindcss": "^3.3.3"
   },
