--- a/package.json
+++ b/package.json
@@ -13,35 +13,35 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "eslint": "^8.44.0",
-    "eslint-config-next": "13.4.10",
+    "eslint": "^8.46.0",
+    "eslint-config-next": "^13.4.12",
     "http-proxy-middleware": "^2.0.6",
-    "next": "13.4.10",
+    "next": "^13.4.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-pdf": "^7.2.0",
+    "react-pdf": "^7.3.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "typescript": "^5.1.6"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.6.6",
-    "@commitlint/config-conventional": "^17.6.6",
+    "@commitlint/cli": "^17.6.7",
+    "@commitlint/config-conventional": "^17.6.7",
     "@types/next": "^9.0.0",
-    "@types/node": "^20.4.2",
-    "@types/react": "^18.2.15",
+    "@types/node": "^20.4.5",
+    "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
     "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.26",
+    "postcss": "^8.4.27",
     "postcss-import": "^15.1.0",
     "postcss-nested": "^6.0.1",
     "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.3.0",
+    "prettier-plugin-tailwindcss": "^0.4.1",
     "raw-loader": "^4.0.2",
-    "sass": "^1.63.6",
+    "sass": "^1.64.1",
     "tailwindcss": "^3.3.3"
   },
   "optionalDependencies": {
