--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-pdf": "^7.3.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
+    "swr": "^2.2.1",
     "typescript": "^5.1.6"
   },
   "devDependencies": {
