returned 'prettier --write .' line

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prettier": "prettier --check .",
+    "prettier": "prettier --write .",
     "prepare": "husky install"
   },
   "dependencies": {
