--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-pdf": "^7.3.0",
     "react-slick": "^0.29.0",
+    "sharp": "^0.32.5",
     "slick-carousel": "^1.8.1",
     "typescript": "^5.1.6"
   },
