feat: change build config

--- a/package.json
+++ b/package.json
@@ -50,5 +50,11 @@
   },
   "optionalDependencies": {
     "husky": "^8.0.3"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
