--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "start": "next start",
     "lint": "next lint",
     "prettier": "prettier --write .",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "ts-check": "tsc --project tsconfig.json --pretty --noEmit && echo "
   },
   "dependencies": {
     "axios": "^1.4.0",
     "eslint": "^8.46.0",
     "http-proxy-middleware": "^2.0.6",
-    "next": "^13.4.16",
+    "next": "^13.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.45.4",
+    "react-hook-form": "^7.46.1",
     "react-pdf": "^7.3.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
@@ -30,13 +31,13 @@
     "@commitlint/config-conventional": "^17.6.7",
     "@types/next": "^9.0.0",
     "@types/node": "^20.4.5",
-    "@types/react": "^18.2.17",
+    "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@types/react-slick": "^0.23.10",
-    "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "@typescript-eslint/parser": "^5.61.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
     "autoprefixer": "^10.4.14",
-    "eslint-config-next": "^13.4.16",
+    "eslint-config-next": "^13.4.19",
     "postcss": "^8.4.27",
     "postcss-import": "^15.1.0",
     "postcss-nested": "^6.0.1",
