--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ts-check": "tsc --project tsconfig.json --pretty --noEmit && echo "
   },
   "dependencies": {
+    "@hookform/devtools": "^4.3.1",
     "axios": "^1.4.0",
     "eslint": "^8.46.0",
     "next": "^13.5.1",
